@@ -22,7 +22,7 @@ creoleaddition is simply installable; simply:
 =cut
 package OddMuse;
 
-$ModulesDescription .= '<p>$Id: creoleaddition.pl,v 1.22 2008/11/15 12:53:26 leycec Exp $</p>';
+$ModulesDescription .= '<p>$Id: creoleaddition.pl,v 1.23 2008/11/15 21:24:33 leycec Exp $</p>';
 
 # ....................{ CONFIGURATION                      }....................
 
@@ -85,7 +85,7 @@ $CreoleAdditionSmallCaps = 1;
 
 # ....................{ MARKUP                             }....................
 push(@MyRules, \&CreoleAdditionRule);
-RegisterBlockLevelElement('blockquote');
+SetHtmlEnvironmentContainer('blockquote');
 
 # Blockquote line-breaks conflict with Creole-style line-breaks.
 $RuleOrder{\&CreoleAdditionRule} = -11;
