@@ -1,5 +1,11 @@
 2008-11-16  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
+	* wiki.pl (RegisterBlockLevelElement): Renamed to
+	SetHtmlEnvironmentContainer (and changed in every other module,
+	where called).
+
+2008-11-16  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
 	* wiki.pl (AddHtmlEnvironment): Corrected a minor regression.
 	Probably not a genuine issue... but one can never tell.
 	* modules/creole.pl (CloseHtmlEnvironmentsCreole): Removed. 
